--- a/Eerste-model.ipynb
+++ b/Eerste-model.ipynb
@@ -89,7 +89,10 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "## Stap 4 berekeningen"
+    "## Stap 4 berekeningen\n",
+    "\n",
+    "we berekenen telkens de nieuwe toestand door bij de oude (vorige) toestand de\n",
+    "verandering op te tellen. Bijvoorbeeld  v = v + dv"
    ]
   },
   {
