--- a/Werkmodel.ipynb
+++ b/Werkmodel.ipynb
@@ -1,1 +1,97 @@
-{"cells":[{"metadata":{},"cell_type":"markdown","source":"# Werkmodel"},{"metadata":{"trusted":true},"cell_type":"code","source":"# Inladen bibliotheken en hulpfiles\nimport matplotlib.pyplot as plt\n%matplotlib inline   \n## Do not change unless you know what you need","execution_count":null,"outputs":[]},{"metadata":{"trusted":true},"cell_type":"code","source":"# constanten en variabelen (vul zelf aan)\nt = 0\ndt = 1\n\n\n\n# lijstvariabelen\ntlijst = []\n\n","execution_count":null,"outputs":[]},{"metadata":{"trusted":true},"cell_type":"code","source":"# loop opzetten en berekeningen toevoegen\nwhile t < 50:\n    t = t + dt\n\n    ######  sla de berekende waarden op in de lijsten\n    tlijst.append(t)\n\n\n\n\n","execution_count":null,"outputs":[]},{"metadata":{"trusted":true},"cell_type":"code","source":"plt.plot(tlijst,tlijst)\nplt.show()","execution_count":null,"outputs":[]},{"metadata":{"trusted":true},"cell_type":"code","source":"","execution_count":null,"outputs":[]}],"metadata":{"kernelspec":{"name":"python3","display_name":"Python 3","language":"python"},"language_info":{"name":"python","version":"3.7.8","mimetype":"text/x-python","codemirror_mode":{"name":"ipython","version":3},"pygments_lexer":"ipython3","nbconvert_exporter":"python","file_extension":".py"}},"nbformat":4,"nbformat_minor":4}
+{
+ "cells": [
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "# Werkmodel"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# Inladen bibliotheken en hulpfiles\n",
+    "import matplotlib.pyplot as plt\n",
+    "%matplotlib inline   \n",
+    "## Do not change unless you know what you need"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# constanten en variabelen (vul zelf aan)\n",
+    "t = 0\n",
+    "dt = 1\n",
+    "\n",
+    "\n",
+    "\n",
+    "# lijstvariabelen (alleen als je later grafieken wilt maken)\n",
+    "tlijst = []\n",
+    "\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# loop opzetten tot wanneer en berekeningen toevoegen\n",
+    "while t < 50:\n",
+    "    t = t + dt\n",
+    "\n",
+    "    ######  sla de berekende waarden op in de lijsten\n",
+    "    tlijst.append(t)\n",
+    "\n",
+    "\n",
+    "\n",
+    "\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# laat de grafieken zien \n",
+    "plt.plot(tlijst,tlijst)\n",
+    "plt.show()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  }
+ ],
+ "metadata": {
+  "kernelspec": {
+   "display_name": "Python 3",
+   "language": "python",
+   "name": "python3"
+  },
+  "language_info": {
+   "codemirror_mode": {
+    "name": "ipython",
+    "version": 3
+   },
+   "file_extension": ".py",
+   "mimetype": "text/x-python",
+   "name": "python",
+   "nbconvert_exporter": "python",
+   "pygments_lexer": "ipython3",
+   "version": "3.7.9"
+  }
+ },
+ "nbformat": 4,
+ "nbformat_minor": 4
+}
