--- a/Eerste-model.ipynb
+++ b/Eerste-model.ipynb
@@ -41,7 +41,9 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "## Stap 1  tekening"
+    "## Stap 1  tekening\n",
+    "\n",
+    "![modelleer-iteratie](img/av02.png)![modelleer-iteratie](img/av12.png)"
    ]
   },
   {
@@ -92,7 +94,8 @@
     "## Stap 4 berekeningen\n",
     "\n",
     "we berekenen telkens de nieuwe toestand door bij de oude (vorige) toestand de\n",
-    "verandering op te tellen. Bijvoorbeeld  v = v + dv"
+    "verandering op te tellen. Bijvoorbeeld  v = v + dv\n",
+    "![modelleer-iteratie](img/av22.png)"
    ]
   },
   {
