--- a/Modelleren-start.ipynb
+++ b/Modelleren-start.ipynb
@@ -28,7 +28,6 @@
    ]
   },
   {
-   "attachments": {},
    "cell_type": "markdown",
    "metadata": {},
    "source": [
@@ -74,6 +73,83 @@
     "Grafisch kunnen we dat zo voorstellen (je begint onderin)\n",
     "\n",
     "![modelleer-cyclus](img/modelleercyclus2.png)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## Modelleren in de praktijk op het LC\n",
+    "\n",
+    "We bouwen voort op de programmeer ervaring die we in de onderbouw opgebouwd hebben.\n",
+    "We maken gebruik van Python als programmeertaal. Python gebruiken we vanwege\n",
+    "de enorme hoeveelheid beschikbare bibliotheken op allerlei onderzoeksterreinen.\n",
+    "Python is op HBO-instellingen en universiteiten de lingua franca geworden voor educatie\n",
+    "en onderzoek. Je kunt de code ook uitvoeren in een standaard programmeeromgeving, zoals\n",
+    "Thonny, VSCode of IDLE, uitvoeren.\n",
+    "\n",
+    "Op school gebruiken we een browser-omgeving genaamd Jupyter. Met Jupyter kun je Python\n",
+    "uitvoeren in je eigen browser (Chrome, Firefox, Edge of Safari) op computers zowel als \n",
+    "allerlei devices, zoals tablets en telefoons. Het is wel aan te raden een computer of laptop\n",
+    "te gebruiken.\n",
+    "\n",
+    "Je code en je tekstdelen staan in zogenaamde cellen. Je verdeelt je code in stukken die\n",
+    "je per cel, per code-deel kunt uitvoeren. Doordat de code uitgevoerd wordt in een Binder\n",
+    "die ergens op een server draait, werkt het nagenoeg in iedere browser en in ieder platform.\n",
+    "De code staat op Github en de binder loopt buiten de schoolsystemen om zodat we onafhankelijk\n",
+    "kunnen werken van schoolsystemen.\n"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "**EEN tekst cell**\n",
+    "\n",
+    "waarin allerlei informatie meegegeven kan worden tot plaatjes aan toe\n",
+    "\n",
+    "![modelleer-cyclus](img/speedy2.png)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "from random import *\n",
+    "\n",
+    "for i in range(5):\n",
+    "    print(i, randint(0,100))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "print(i)\n",
+    "print(random())"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "De code-cellen zijn duidelijk herkenbaar. De tekstcellen zie je als tekstblokken terug.\n",
+    "\n",
+    "Om het modelleren te vergemakkelijken voorzien we in een zogenaamde template, het Werkmodel.\n",
+    "In het werkmodel staan het skelet vanje model al klaar (in programmeertermen je boilerplate).\n",
+    "Je past het model aan aan de hande van de stappen eerder beschreven.\n",
+    "\n",
+    "LOOP ALLE STAPPEN DOOR  en herhaal waar nodig. Vooral het tekenen en het in tekst beschrijven\n",
+    "van wat je weet of veronderstelt van het probleem is uiterst belangrijk en bepaalt grotendeels\n",
+    "een succesvol eindresultaat.\n",
+    "\n",
+    "Het spelen met een model, eigenlijk het veranderen van beginwaarden en de berekening maakt dieper\n",
+    "inzicht mogelijk. Je krijgt daarmee inzicht in wat een verandering betekent voor de doorloop\n",
+    "en uitkomst van je model."
    ]
   },
   {
