--- a/Werkmodel.ipynb
+++ b/Werkmodel.ipynb
@@ -16,7 +16,7 @@
     "# Inladen bibliotheken en hulpfiles\n",
     "import matplotlib.pyplot as plt\n",
     "%matplotlib inline   \n",
-    "## Do not change unless you know what you need"
+    "## Do not change unless you know what you need\n"
    ]
   },
   {
@@ -62,7 +62,7 @@
    "source": [
     "# laat de grafieken zien \n",
     "plt.plot(tlijst,tlijst)\n",
-    "plt.show()"
+    "plt.show()\n"
    ]
   },
   {
